--- a/package.json
+++ b/package.json
@@ -21,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/Txarli/ts-testing-boilerplate/issues"
   },
-  "homepage": "https://github.com/Txarli/ts-testing-boilerplate#readme"
+  "homepage": "https://github.com/Txarli/ts-testing-boilerplate#readme",
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.2",
+    "babel-jest": "^27.4.5",
+    "jest": "^27.4.5",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  }
 }
